# automated-scripts

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  initial-requirements.md  manifest.yaml
.github/workflows/: ci.yml
config/: subscriptions.yaml.example
docs/: 00-architecture-overview.md  01-base-server-iac.md  02-coolify-subdomains-demos.md  03-remote-dev-vscode.md  04-claude-code-team.md  05-hermes-orchestrator.md  06-multica-integration.md  07-agentic-workflows.md  08-security-secrets-backups.md  09-ai-org-agents.md  10-token-efficiency-toolkit.md  11-platform-agents-skills.md  12-ai-trading-bot.md  13-full-tech-company-roster.md  14-hermes-enhancements.md  15-multica-agents-skills-squads.md  TODO.md
docs/scripts/: README.md  task-01-scaffold.md  task-02-ci-pipeline.md  task-03-ops-scripts-plugin.md  task-04-health-report.md  task-05-backup-check.md  task-06-cert-expiry.md  task-07-docker-cleanup.md  task-08-coolify-status.md  task-09-coolify-deploy.md  task-10-ansible-drift.md  task-11-subs-report.md  task-12-usage-report.md  task-13-morning-briefing.md  task-14-weekly-summary.md  task-15-wire-hermes-ops.md
hermes/: __init__.py  profiles.py
hermes/plugins/: __init__.py
hermes/plugins/ops_scripts/: __init__.py  plugin.py  plugin.yaml  (+2 more)
hermes/tests/: test_profiles.py
python/: README.md  pyproject.toml
python/src/ops_scripts/: __init__.py
python/tests/: test_ops_scripts_plugin.py  test_scaffold.py
shell/: README.md  backup-check.sh  cert-expiry.sh  docker-cleanup.sh  health-report.sh
shell/lib/: README.md
tests/: README.md  test_backup_check.py
